tests/ui/closures/add_semicolon_non_block_closure.stderr
error[E0308]: mismatched types
  --> $DIR/add_semicolon_non_block_closure.rs:8:12
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     foo(|| bar())
   |            ^^^^^ expected `()`, found `i32`
   |
help: consider using a semicolon here
   |
LL |     foo(|| { bar(); })
   |            +      +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
